removed transform animation on productCard for -1000 width to fix a bug on iphone devices

--- a/src/components/ProductCard/productCard.css
+++ b/src/components/ProductCard/productCard.css
@@ -17,7 +17,6 @@
 
 .productCard:hover{
     transform: translate(-0.25rem, -0.25rem);
-    -webkit-transform: translate(-0.25rem, -0.25rem);
     box-shadow: 0.25rem 0.25rem 0 black
 }
 
@@ -109,7 +108,12 @@
 
 /* R E S P O N S I V E */
 
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
+
+    .productCard:hover {
+        transform: none;
+        box-shadow: none;
+    }
 
 }
 
